Edit page alignment fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -70,6 +70,3 @@ label {
   margin-bottom: 5px;
   border-radius: 0;
 }
-.drpdownwidth{
-  width:208%
-}
